--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>AI Tools</span>
+                            <span>Prompt Engineering</span>
                             <span>70%</span>
                         </div>
                         <div class="line mysql"></div>
